--- a/templates/content.html
+++ b/templates/content.html
@@ -7,16 +7,13 @@
                 <button type="button" name="button" ng-click="updatePage()">UPDATE</button>
             </div>
             <div class="col-sm-12">
-                <h4>Total Users: <span style="font-size:24px;">{{totalUsers}}</span></h4>
-                <h4>Total Logins: <span style="font-size:24px;">{{abLoginCount}}</span></h4>
-                <h4>Total Projects: <span style="font-size:24px;">{{abSCount}}</span></h4>
+              <h4>Signature One: <span style="font-size:24px;">{{signatureOne}}</span></h4>
+              <h4>Scroll To top One: <span style="font-size:24px;">{{scrollToTopOne}}</span></h4>
+              <h4>Social Icons One: <span style="font-size:24px;">{{socialIconsOne}}</span></h4>
+              <h4>Magnific Popup One: <span style="font-size:24px;">{{magnificPopupOne}}</span></h4>
+                <h4>regenerateThumbnailsAdvanced: <span style="font-size:24px;">{{regenerateThumbnailsAdvanced}}</span></h4>
+                <h2>Total Downloads:{{ signatureOne+scrollToTopOne+socialIconsOne+magnificPopupOne+regenerateThumbnailsAdvanced }}</h2>
             </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-          <canvas id="products_chart" width="400" height="400"></canvas>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-          <canvas id="login_chart" width="400" height="400"></canvas>
         </div>
     </div>
 </div>
