Added total variable to scripts

--- a/templates/content.html
+++ b/templates/content.html
@@ -11,7 +11,7 @@
               <h4>Scroll To top One: <span style="font-size:24px;">{{scrollToTopOne}}</span></h4>
               <h4>Social Icons One: <span style="font-size:24px;">{{socialIconsOne}}</span></h4>
               <h4>Magnific Popup One: <span style="font-size:24px;">{{magnificPopupOne}}</span></h4>
-                <h2>Total:{{ signatureOne+scrollToTopOne+socialIconsOne+magnificPopupOne+regenerateThumbnailsAdvanced }}</h2>
+                <h2>Total:{{ total }}</h2>
             </div>
         </div>
     </div>
