added regenerate thumbnails advanced

--- a/templates/content.html
+++ b/templates/content.html
@@ -11,6 +11,9 @@
               <h4>Scroll To top One: <span style="font-size:24px;">{{scrollToTopOne}}</span></h4>
               <h4>Social Icons One: <span style="font-size:24px;">{{socialIconsOne}}</span></h4>
               <h4>Magnific Popup One: <span style="font-size:24px;">{{magnificPopupOne}}</span></h4>
+              <h4>Countdown Timer One: <span style="font-size:24px;">{{countdownTimerOne}}</span></h4>
+              <h4>Give a Beer One: <span style="font-size:24px;">{{giveABeerOne}}</span></h4>
+              <h4>regenerate Thumbnails Advanced: <span style="font-size:24px;">{{regenerateThumbnailsAdvanced}}</span></h4>
                 <h2>Total:{{ total }}</h2>
             </div>
         </div>
