limited stats to one plugin

--- a/templates/content.html
+++ b/templates/content.html
@@ -7,14 +7,9 @@
                 <button type="button" name="button" ng-click="updatePage()">UPDATE</button>
             </div>
             <div class="col-sm-12">
-              <h4>Signature One: <span style="font-size:24px;">{{signatureOne}}</span></h4>
-              <h4>Scroll To top One: <span style="font-size:24px;">{{scrollToTopOne}}</span></h4>
-              <h4>Social Icons One: <span style="font-size:24px;">{{socialIconsOne}}</span></h4>
-              <h4>Magnific Popup One: <span style="font-size:24px;">{{magnificPopupOne}}</span></h4>
-              <h4>Countdown Timer One: <span style="font-size:24px;">{{countdownTimerOne}}</span></h4>
-              <h4>Give a Beer One: <span style="font-size:24px;">{{giveABeerOne}}</span></h4>
-              <h4>regenerate Thumbnails Advanced: <span style="font-size:24px;">{{regenerateThumbnailsAdvanced}}</span></h4>
-                <h2>Total:{{ total }}</h2>
+              <h4>Countdown Timer One: </h4>
+              Total Downloads:<span style="font-size:24px;">{{downloaded}}</span><br/>
+              Active Installs:<span style="font-size:24px;">{{active}}</span>
             </div>
         </div>
     </div>
