added regenerate thumbnails advanced section added rta total downloads added rta total active installs added overall total downloads added overall total isntalls functionality implemented and tested

--- a/templates/content.html
+++ b/templates/content.html
@@ -8,9 +8,22 @@
             </div>
             <div class="col-sm-12">
               <h4>Countdown Timer One: </h4>
-              Total Downloads:<span style="font-size:24px;">{{downloaded}}</span><br/>
-              Active Installs:<span style="font-size:24px;">{{active}}</span>
+              Total Downloads:<span style="font-size:24px;">{{ctoTotal}}</span><br/>
+              Active Installs:<span style="font-size:24px;">{{ctoActive}}</span>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+          <h4>Regenerate Thumbnails Advanced: </h4>
+          Downloads:<span style="font-size:24px;">{{rtaTotal}}</span><br/>
+          Active Installs:<span style="font-size:24px;">{{rtaActive}}</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+          <h4>Total Downloads: <span style="font-size:34px;">{{totalDownloads}}</span> </h4>
+          <h4>Total Active Installs: <span style="font-size:34px;">{{totalActive}}</span> </h4>
         </div>
     </div>
 </div>
